our website was lit

--- a/index.html
+++ b/index.html
@@ -6,34 +6,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="skeleton.css">
     <title>the Klosstin Show</title>
-    <script>
-        /* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-    document.getElementById("myDropdown").classList.toggle("show");
-}
-
-// Close the dropdown menu if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-    </script>
   </head>
   <body>
       <div id="topbaru">
           <div class="dropdown">
-              <button onclick="myFunction()" class="dropbtn">Week 1</button>
-          <div id="myDropdown" class="dropdown-content">
+              <button id="dropbtn">Week 1</button>
+          <div id="dropdown-content">
                 <a href="dayOne.html">day one</a>
                 <a href="dayTwo.html">day two</a>
                 <a href="dayThree.html">day three</a>
@@ -41,9 +19,9 @@ window.onclick = function(event) {
                 <a href="dayFive.html">day five</a>
                 </div>
   </div>
-  <div class="dropdown">
-              <button onclick="myFunction()" class="dropbtn">Week 2</button>
-          <div id="myDropdown" class="dropdown-content">
+  <div class="dropdown2">
+              <button id="dropbtn2">Week 2</button>
+          <div id="dropdown-content2">
                 <a href="daySix.html">day six</a>
                 <a href="daySeven.html">day seven</a>
                 <a href="dayEight">day eight</a>
@@ -51,16 +29,16 @@ window.onclick = function(event) {
                 <a href="dayTen.html">day ten</a>
                 </div>
   </div>
-  <div class="dropdown">
-              <button onclick="myFunction()" class="dropbtn">Other</button>
-          <div id="myDropdown" class="dropdown-content">
+  <div class="dropdown3">
+              <button id="dropbtn3">Other</button>
+          <div id="dropdown-content3">
                 <a href="other.html">Other Advice</a>
   </div>
   </div>
-  <div class="dropdown">
-              <button onclick="myFunction()" class="dropbtn">Gloria's Memes</button>
-          <div id="myDropdown" class="dropdown-content">
-                <a href="#">Dab</a>
+  <div class="dropdown4">
+              <button id="dropbtn4">Gloria's Memes</button>
+          <div id="dropdown-content4">
+                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwiosu75_rrUAhWE2YMKHXEEDH4Q3ywIJzAA&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Da7PqyopzNPo&usg=AFQjCNEriwX782rpky_42scSkK_0I9jvsQ">Dab</a>
                 <a href="#">Pistachio</a>
                 <a href="#">Microsoft wrecking E3</a>
                 <a href="#">The Rock</a>
@@ -68,6 +46,7 @@ window.onclick = function(event) {
 </div>
       </div>
       <h1 class="title">KWKN</h1>
-          <h3 class="presents">presents The Klosstin Show</h3>
+          <a href="index.html"><h3 class="presents">presents The Klosstin Show</h3></a>
+          <img class="index" src="https://files.slack.com/files-tmb/T5MP9J75E-F5SKKQTRB-bead7e2e69/kd9a5029_720.jpg">
   </body>
 </html>
